// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
<div
  className="sc-1e38spu-0 gBsrEy"
>
  <input
    className="sc-1e38spu-0 hUMUTJ"
    disabled={true}
    type="text"
  />
</div>
`;

exports[`Input placeholder 1`] = `
<div
  className="sc-1e38spu-0 gBsrEy"
>
  <input
    className="sc-1e38spu-0 hUMUTJ"
    disabled={false}
    placeholder="test"
    type="text"
  />
</div>
`;

exports[`Input renders correctly 1`] = `
<div
  className="sc-1e38spu-0 gBsrEy"
>
  <input
    className="sc-1e38spu-0 hUMUTJ"
    disabled={false}
    type="text"
  />
</div>
`;
